# libkngin

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  new.txt  test
libkngin/: CMakeLists.txt  CodeStyle.md  CodeStype.md  Test.md
libkngin/core/: CMakeLists.txt  barrier.cpp  barrier.h  bits.h  buffer.cpp  buffer.h  common.cpp  common.h  cond.cpp  cond.h  copyable.h  define.h  error.cpp  error.h  exception.cpp  exception.h  local_lock.cpp  local_lock.h  lock.h  log.cpp  log.h  logfile.h  logmgr.cpp  logmgr.h  memory.h  msg.cpp  msg.h  mutex.cpp  mutex.h  noncopyable.h  rwlock.cpp  rwlock.h  sync_deque.h  sync_queue.h  system_error.h  task_base.cpp  task_base.h  thread.cpp  thread.h  threadpool.cpp  (+9 more)
libkngin/core/base/: barrier.cpp  barrier.h  bits.h  buffer.cpp  buffer.h  common.cpp  common.h  cond.cpp  cond.h  config.h  define.h  error.cpp  error.h  error_code.cpp  error_code.h  exception.cpp  exception.h  filefd.cpp  filefd.h  local_lock.h  lock.h  log.cpp  log.h  logfile.h  logmgr.cpp  logmgr.h  memory.h  mutex.cpp  mutex.h  noncopyable.h  rwlock.cpp  rwlock.h  system_error.h  thread.cpp  thread.h  threadpool.cpp  threadpool.h  timeout.cpp  timeout.h  timestamp.cpp  (+1 more)
libkngin/core/event/: epoller.cpp  epoller.h  epoller_event.cpp  epoller_event.h  event.cpp  event.h  event_loop.cpp  event_loop.h  io_thread.cpp  io_thread.h  io_threadpool.cpp  io_threadpool.h  iocp_event.cpp  iocp_event.h  iocp_poller.cpp  iocp_poller.h  timer.cpp  timer.h  win_utils.cpp  win_utils.h
libkngin/detail/core/: src.cpp
libkngin/detail/core/base/: assert.h  barrier.cpp  barrier_impl.h  buffer.cpp  common.cpp  cond.cpp  cond_impl.h  descriptor.cpp  descriptor.h  error.cpp  error_code.cpp  exception.cpp  handle.cpp  handle.h  kernel_list.h  list.h  list_head.h  list_node.h  log.cpp  logfile.cpp  logger.cpp  mutex.cpp  mutex_impl.h  obj_mgr.h  obj_node.h  rmutex.cpp  rmutex_impl.h  semaphore.cpp  semaphore_impl.h  string.cpp  thread.cpp  thread_impl.h  timeout.cpp  timestamp.cpp  win_utils.cpp  win_utils.h
libkngin/detail/core/base/impl/: posix_barrier.h  posix_cond.h  posix_mutex.h  posix_rmutex.h  posix_semaphore.h  posix_thread.cpp  posix_thread.h  pthread_cond.h  pthread_mutex.h  win_barrier.h  win_cond.h  win_mutex.cpp  win_mutex.h  win_rmutex.h  win_semaphore.h  win_thread.cpp  win_thread.h
libkngin/detail/core/event/: event_loop.cpp  op_queue.h  reactor.h  reactor_event_base.h  timer.h  timer_queue.cpp  timer_queue.h
libkngin/detail/core/event/impl/: epoll_event.cpp  epoll_event.h  epoll_reactor.cpp  epoll_reactor.h  iocp_event.h  iocp_operation.h  iocp_reactor.cpp  iocp_reactor.h  monotonic_timer.cpp  monotonic_timer.h  timerfd_timer.cpp  (+1 more)
libkngin/detail/net/: address.cpp  connector.cpp  connector_impl.h  listener.cpp  listener_impl.h  service.cpp  session.cpp  session_impl.h  socket.cpp  sockopts.cpp  src.cpp  stream.h
libkngin/detail/net/impl/: posix_connector.cpp  posix_connector.h  posix_listener.cpp  posix_listener.h  posix_socket.cpp  posix_socket.h
libkngin/detail/net/tcp/: tcp_stream.h
libkngin/include/: libkngin.h
libkngin/include/kngin/: config.h
libkngin/include/kngin/core/: define.h
libkngin/include/kngin/net/: addres.h  address.h  connector.h  detail.h  impl.h  listener.h  server_opts.h  service.h  socket.h  sockopts.h
libkngin/include/pthreads_win32/: pthread.h
libkngin/net/: CMakeLists.txt  address.cpp  address.h  connection.cpp  connection.h  epoll.cpp  epoll.h  epoll_event.cpp  epoll_event.h  epoller.cpp  epoller.h  epoller_event.cpp  epoller_event.h  event.cpp  event.h  event_loop.cpp  event_loop.h  event_loop_pimpl.h  file.h  filefd.cpp  filefd.h  io_thread.cpp  io_thread.h  io_threadpool.cpp  io_threadpool.h  listener.cpp  listener.h  msg.cpp  msg.h  msg_type.h  net_buffer.cpp  net_buffer.h  socket.cpp  socket.h  sockopts.cpp  sockopts.h  timer.cpp  timer.h  work_task.cpp  work_task.h  (+5 more)
libkngin/net/tcp/: client.h  server.cpp  server.h  server_opts.h  session.cpp  session.h  tcp_connection.cpp  tcp_connection.h  tcp_server.cpp  tcp_server.h
libkngin/net/udp/: client.h  server.h  server_opts.h
libkngin/temp/: msg.cpp  msg.h  msg_type.h  sync_deque.h  sync_queue.h  task_base.cpp  task_base.h  work_task.cpp  work_task.h  work_thread.cpp  work_thread.h
libkngin_test/: CMakeLists.txt  buffer_test.cpp  cond_test.cpp  deque_test.cpp  event_loop_test.cpp  io_thread_test.cpp  io_threadpool_test.cpp  log_test.cpp  main.cpp  msg_test.cpp  msg_test.h  mutex_test.cpp  mylogfile.h  queue_test.cpp  rwlock_test.cpp  socket_test.cpp  sockopts_test.cpp  sync_deque_test.cpp  sync_queue_test.cpp  tcp_connection_test.cpp  tcp_server_test.cpp  test.cpp  thread_test.cpp  threadpoll_test.cpp  work_thread_test.cpp
libkngin_test/simple_ftp_server/: simple_ftp_server.cpp
test/: CMakeLists.txt
test/core/base/barrier/: CMakeLists.txt  barrier_test.cpp
test/core/base/bits/: CMakeLists.txt  bits_test.cpp
test/core/base/buffer/: CMakeLists.txt  buffer_test.cpp
test/core/base/cond/: CMakeLists.txt  cond_test.cpp
test/core/base/error_code/: CMakeLists.txt  error_code_test.cpp
test/core/base/exception/: CMakeLists.txt  exception_test.cpp
test/core/base/format_string/: CMakeLists.txt  format_string_test.cpp
test/core/base/log/: CMakeLists.txt  log_test.cpp
test/core/base/mutex/: CMakeLists.txt  mutex_test.cpp
test/core/base/rmutex/: CMakeLists.txt  rmutex_test.cpp
test/core/base/semaphore/: CMakeLists.txt  semaphore_test.cpp
test/core/base/system_error/: CMakeLists.txt  system_error.cpp  system_error_test.cpp
test/core/base/thread/: CMakeLists.txt  thread_test.cpp
test/core/base/timeout/: CMakeLists.txt  timeout_test.cpp
test/core/base/timestamp/: CMakeLists.txt  timestamp_test.cpp
test/core/event/event_loop/: CMakeLists.txt  event_loop_test.cpp
test/list/: CMakeLists.txt  kernel_list.h  list.h  main.cpp
test/net/socket/address/: CMakeLists.txt  address_test.cpp
test/net/socket/socket/: CMakeLists.txt  socket_test.cpp
test/net/tcp/tcp_server/: CMakeLists.txt  tcp_server_test.cpp
test/temp/: CMakeLists.txt  test.cpp
(+64 files in other folders)
