cmake_minimum_required(VERSION 3.10 FATAL_ERROR)

if(MSVC)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /std:c++17 /Zc:__cplusplus /EHa")
else()
    set(CMAKE_CXX_STANDARD 17)
endif(MSVC)

set(CMAKE_CXX_STANDARD 17)

add_subdirectory(temp)
add_subdirectory(core/base/bits)
add_subdirectory(core/base/exception)
add_subdirectory(core/base/format_string)
add_subdirectory(core/base/system_error)
add_subdirectory(core/base/mutex)
add_subdirectory(core/base/cond)
#add_subdirectory(core/base/rwlock)
add_subdirectory(core/base/barrier)
add_subdirectory(core/base/thread)
add_subdirectory(core/base/timestamp)
add_subdirectory(core/base/log)
add_subdirectory(core/base/buffer)
add_subdirectory(core/base/timeout)
add_subdirectory(core/base/detail/descriptor)
add_subdirectory(core/base/detail/list)
